--- a/web/game/battle/styles.css
+++ b/web/game/battle/styles.css
@@ -1,4 +1,6 @@
 #battle {
+    margin: auto;
+    width: 1300px;
     display: flex;
     flex-direction: row;
     height: 550px;
@@ -66,6 +68,10 @@
 .skill:active {
     filter: brightness(80%);
     opacity: 90%;
+}
+
+.skill-in {
+    width: 100%;
 }
 
 .skill-0 {
