--- a/web/scripts/style.css
+++ b/web/scripts/style.css
@@ -4,6 +4,13 @@ body {
     color: #323232;
     font-size: x-large;
     padding: 0;
+    position: absolute;
+    left: 50%;
+    width: 1280px;
+    height: auto;
+    min-height: 720px;
+    transform-origin: 50% 0;
+    overflow: hidden;
     margin: 0;
 }
 
@@ -175,6 +182,35 @@ input:-webkit-autofill:focus {
 .popup.remove {
     -webkit-animation: fadeOut 0.6s forwards;
     animation: fadeOut 0.6s forwards;
+}
+
+#tutorial {
+    /* z-index: 2;
+    position: absolute;
+    bottom: 20%; */
+    width: 40em;
+    background-color: rgba(50, 50, 50, 0.95);
+    color: #aaaaaa;
+    border-radius: 1vmin;
+    padding: 2vmin;
+}
+
+#tutorial.hidden {
+    display: none;
+}
+
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(50, 50, 50, 0.95);
+    color: #aaaaaa;
+    width: 100%;
+    height: 100%;
+}
+
+#overlay.hidden {
+    display: none;
 }
 
 @-webkit-keyframes fadeIn {
